--- a/Source/TreasureGuide.Sniffer/TreasureGuide.Sniffer.csproj
+++ b/Source/TreasureGuide.Sniffer/TreasureGuide.Sniffer.csproj
@@ -56,9 +56,11 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Helpers\NumberFormatter.cs" />
     <Compile Include="Helpers\ParsingExtensions.cs" />
     <Compile Include="Parsers\TreasureParser.cs" />
     <Compile Include="Parsers\UnitFlagParser.cs" />
+    <Compile Include="Parsers\StageParser.cs" />
     <Compile Include="Parsers\UnitParser.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
