--- a/Source/TreasureGuide.Entities/TreasureGuide.Entities.csproj
+++ b/Source/TreasureGuide.Entities/TreasureGuide.Entities.csproj
@@ -74,7 +74,16 @@
     <Compile Include="StageDifficulty.cs">
       <DependentUpon>TreasureEntities.tt</DependentUpon>
     </Compile>
+    <Compile Include="StageLevel.cs">
+      <DependentUpon>TreasureEntities.tt</DependentUpon>
+    </Compile>
     <Compile Include="StageType.cs">
+      <DependentUpon>TreasureEntities.tt</DependentUpon>
+    </Compile>
+    <Compile Include="StageUnit.cs">
+      <DependentUpon>TreasureEntities.tt</DependentUpon>
+    </Compile>
+    <Compile Include="StageUnitAttackPattern.cs">
       <DependentUpon>TreasureEntities.tt</DependentUpon>
     </Compile>
     <Compile Include="TreasureEntities.Context.cs">
