--- a/Source/TreasureGuide.Web/packages.config
+++ b/Source/TreasureGuide.Web/packages.config
@@ -1,10 +1,15 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
   <package id="Antlr" version="3.4.1.9004" targetFramework="net452" />
-  <package id="bootstrap" version="3.0.0" targetFramework="net452" />
+  <package id="bootstrap" version="3.1.1" targetFramework="net452" />
+  <package id="Durandal" version="2.2.0" targetFramework="net452" />
+  <package id="Durandal.StarterKit" version="2.2.0" targetFramework="net452" />
+  <package id="Durandal.Transitions" version="2.2.0" targetFramework="net452" />
   <package id="EntityFramework" version="6.1.3" targetFramework="net452" />
+  <package id="FontAwesome" version="4.0.3.1" targetFramework="net452" />
   <package id="jQuery" version="1.10.2" targetFramework="net452" />
   <package id="jQuery.Validation" version="1.11.1" targetFramework="net452" />
+  <package id="knockoutjs" version="3.4.0" targetFramework="net452" />
   <package id="Microsoft.AspNet.Identity.Core" version="2.2.1" targetFramework="net452" />
   <package id="Microsoft.AspNet.Identity.EntityFramework" version="2.2.1" targetFramework="net452" />
   <package id="Microsoft.AspNet.Identity.Owin" version="2.2.1" targetFramework="net452" />
@@ -34,6 +39,9 @@
   <package id="Modernizr" version="2.6.2" targetFramework="net452" />
   <package id="Newtonsoft.Json" version="6.0.4" targetFramework="net452" />
   <package id="Owin" version="1.0" targetFramework="net452" />
+  <package id="RequireJS" version="2.1.11" targetFramework="net452" />
+  <package id="RequireJS.Text" version="2.0.7" targetFramework="net452" />
   <package id="Respond" version="1.2.0" targetFramework="net452" />
+  <package id="WebActivator" version="1.5.3" targetFramework="net452" />
   <package id="WebGrease" version="1.5.2" targetFramework="net452" />
 </packages>
