--- a/Source/TreasureGuide.Web/packages.config
+++ b/Source/TreasureGuide.Web/packages.config
@@ -4,6 +4,7 @@
   <package id="Autofac" version="4.3.0" targetFramework="net452" />
   <package id="Autofac.Mvc5" version="4.0.0" targetFramework="net452" />
   <package id="Autofac.WebApi2" version="4.0.1" targetFramework="net452" />
+  <package id="AutoMapper" version="5.2.0" targetFramework="net452" />
   <package id="bootstrap" version="3.1.1" targetFramework="net452" />
   <package id="Durandal" version="2.2.0" targetFramework="net452" />
   <package id="Durandal.StarterKit" version="2.2.0" targetFramework="net452" />
