--- a/Source/TreasureGuide.Web/package.json
+++ b/Source/TreasureGuide.Web/package.json
@@ -8,8 +8,8 @@
   },
   "license": "MIT",
   "dependencies": {
-    "aurelia-bootstrapper": "^2.1.0",
     "aurelia-animator-css": "^1.0.1",
+    "aurelia-bootstrapper": "^2.1.0",
     "bluebird": "^3.4.1",
     "requirejs": "^2.3.2",
     "text": "github:requirejs/text#latest"
@@ -45,6 +45,7 @@
     "karma-chrome-launcher": "^1.0.1",
     "karma-jasmine": "^1.0.2",
     "karma-typescript-preprocessor": "^0.2.1",
-    "@types/jasmine": "^2.2.0"
+    "@types/jasmine": "^2.2.0",
+    "gulp-shell": "^0.6.3"
   }
 }
