--- a/Source/TreasureGuide.Web/.editorconfig
+++ b/Source/TreasureGuide.Web/.editorconfig
@@ -3,10 +3,10 @@
 # top-most EditorConfig file
 root = true
 
-# Unix-style newlines with a newline ending every file
+# Windows-style newlines with a newline ending every file
 [*]
-end_of_line = lf
-insert_final_newline = true
-# 2 space indentation
+end_of_line = crlf
+trim_trailing_whitespace = true
+# 4 space indentation
 indent_style = space
-indent_size = 2
+indent_size = 4
