--- a/Source/TreasureGuide.Entities/TreasureGuide.Entities.csproj
+++ b/Source/TreasureGuide.Entities/TreasureGuide.Entities.csproj
@@ -52,6 +52,8 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Helpers\ContextExtensions.cs" />
+    <Compile Include="InterfaceDefinitions.cs" />
+    <Compile Include="Interfaces\IIdItem.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="SocketType.cs">
       <DependentUpon>TreasureEntities.tt</DependentUpon>
