--- a/Source/TreasureGuide.Web/appsettings.json
+++ b/Source/TreasureGuide.Web/appsettings.json
@@ -1,6 +1,6 @@
 ﻿{
     "ConnectionStrings": {
-        "DefaultConnection": "Server=(localdb)\\tcdb;Database=tcdb;Trusted_Connection=True;MultipleActiveResultSets=true"
+        "TreasureEntities": "Server=(localdb)\\tcdb;Database=tcdb;Trusted_Connection=True;MultipleActiveResultSets=true"
     },
     "Logging": {
         "IncludeScopes": false,
