--- a/Source/TreasureGuide.Web/package.json
+++ b/Source/TreasureGuide.Web/package.json
@@ -1,6 +1,6 @@
 {
-  "name": "treasureguideweb",
-  "description": "An Aurelia client application.",
+  "name": "Nakama",
+  "description": "Treasure Cruise team database.",
   "version": "0.1.0",
   "repository": {
     "type": "???",
