Stubbing out stage picker.

--- a/Source/TreasureGuide.Web/package.json
+++ b/Source/TreasureGuide.Web/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "Nakama",
+  "name": "nakama",
   "description": "Treasure Cruise team database.",
   "version": "0.1.0",
   "repository": {
