--- a/Source/TreasureGuide.Entities/TreasureGuide.Entities.csproj
+++ b/Source/TreasureGuide.Entities/TreasureGuide.Entities.csproj
@@ -66,6 +66,9 @@
     <Compile Include="RoundUnitBehavior.cs">
       <DependentUpon>TreasureEntities.tt</DependentUpon>
     </Compile>
+    <Compile Include="Ship.cs">
+      <DependentUpon>TreasureEntities.tt</DependentUpon>
+    </Compile>
     <Compile Include="SocketType.cs">
       <DependentUpon>TreasureEntities.tt</DependentUpon>
     </Compile>
