--- a/Source/TreasureGuide.Web/TreasureGuide.Web.csproj
+++ b/Source/TreasureGuide.Web/TreasureGuide.Web.csproj
@@ -33,5 +33,8 @@
   <ItemGroup>
     <ProjectReference Include="..\TreasureGuide.Entities\TreasureGuide.Entities.csproj" />
   </ItemGroup>
+  <ItemGroup>
+    <Reference Include="System.Web.Extensions" />
+  </ItemGroup>
 
 </Project>
