Updating app name.

--- a/Source/TreasureGuide.Web/package.json
+++ b/Source/TreasureGuide.Web/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "nakama",
+  "name": "nakama-db",
   "description": "Treasure Cruise Team Database.",
   "version": "0.1.0",
   "repository": {
