We almsot working.

--- a/Source/TreasureGuide.Web/appsettings.json
+++ b/Source/TreasureGuide.Web/appsettings.json
@@ -2,6 +2,10 @@
     "ConnectionStrings": {
         "TreasureEntities": "Server=(localdb)\\tcdb;Database=tcdb;Trusted_Connection=True;MultipleActiveResultSets=true"
     },
+    "JwtIssuerOptions": {
+        "Issuer": "https://localhost:44387/",
+        "Audience": "https://localhost:44387/"
+    },
     "Logging": {
         "IncludeScopes": false,
         "LogLevel": {
