--- a/Source/TreasureGuide.Web/TreasureGuide.Web.csproj
+++ b/Source/TreasureGuide.Web/TreasureGuide.Web.csproj
@@ -16,6 +16,7 @@
         <PackageReference Include="Microsoft.AspNetCore" Version="1.1.2" />
         <PackageReference Include="Microsoft.AspNetCore.Authentication.Cookies" Version="1.1.2" />
         <PackageReference Include="Microsoft.AspNetCore.Authentication.Google" Version="1.1.2" />
+        <PackageReference Include="Microsoft.AspNetCore.Authentication.JwtBearer" Version="1.1.2" />
         <PackageReference Include="Microsoft.AspNetCore.Diagnostics.EntityFrameworkCore" Version="1.1.2" />
         <PackageReference Include="Microsoft.AspNetCore.Identity.EntityFrameworkCore" Version="1.1.2" />
         <PackageReference Include="Microsoft.AspNetCore.Mvc" Version="1.1.3" />
