Bearer with JWT now functional.

--- a/Source/TreasureGuide.Web/appsettings.json
+++ b/Source/TreasureGuide.Web/appsettings.json
@@ -4,6 +4,7 @@
     },
     "JwtIssuerOptions": {
         "Issuer": "https://localhost:44387/",
+        "Subject": "NakamaDB",
         "Audience": "https://localhost:44387/"
     },
     "Logging": {
